@@ -27,10 +27,13 @@ The rules for this file:
   * removed CHO and EAM (formyl and ethanol termini of gA in CHARMM)
     from the set of residues recognized as protein (collison with
     commonly used CHO for cholesterol)
+  * PrimitivePDBWriter: special segid SYSTEM is translated to empty
+    chainID
 
   Fixes
 
   * HydrogenBondAnalysis: NH1 and NH2 were not recognized
+  * GROWriter: enforce maximum resname and atomname length of 5 chars
 
 
 02/16/12 sebastien.buchoux
